cluster/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  defaultBackend:
    service:
      name: uptime-kuma
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
      - uptime-kuma
